@@ -1,10 +1,10 @@
 #ifndef CMAKECONFIG_H
 #define CMAKECONFIG_H
 
-#cmakedefine01 ENABLE_ANIMATION_API
-#cmakedefine01 ENABLE_API_TESTS
 #cmakedefine01 ENABLE_3D_RENDERING
 #cmakedefine01 ENABLE_ACCELERATED_2D_CANVAS
+#cmakedefine01 ENABLE_ANIMATION_API
+#cmakedefine01 ENABLE_API_TESTS
 #cmakedefine01 ENABLE_AS_IMAGE
 #cmakedefine01 ENABLE_ASSEMBLER_WX_EXCLUSIVE
 #cmakedefine01 ENABLE_BATTERY_STATUS
@@ -12,18 +12,19 @@
 #cmakedefine01 ENABLE_CHANNEL_MESSAGING
 #cmakedefine01 ENABLE_CLIENT_BASED_GEOLOCATION
 #cmakedefine01 ENABLE_CSP_NEXT
+#cmakedefine01 ENABLE_CSS3_TEXT_DECORATION
 #cmakedefine01 ENABLE_CSS_BOX_DECORATION_BREAK
 #cmakedefine01 ENABLE_CSS_COMPOSITING
 #cmakedefine01 ENABLE_CSS_EXCLUSIONS
+#cmakedefine01 ENABLE_CSS_FILTERS
+#cmakedefine01 ENABLE_CSS_HIERARCHIES
 #cmakedefine01 ENABLE_CSS_IMAGE_ORIENTATION
 #cmakedefine01 ENABLE_CSS_IMAGE_RESOLUTION
 #cmakedefine01 ENABLE_CSS_IMAGE_SET
 #cmakedefine01 ENABLE_CSS_REGIONS
+#cmakedefine01 ENABLE_CSS_SHADERS
 #cmakedefine01 ENABLE_CSS_STICKY_POSITION
 #cmakedefine01 ENABLE_CSS_VARIABLES
-#cmakedefine01 ENABLE_CSS3_TEXT_DECORATION
-#cmakedefine01 ENABLE_CSS_FILTERS
-#cmakedefine01 ENABLE_CSS_SHADERS
 #cmakedefine01 ENABLE_CUSTOM_SCHEME_HANDLER
 #cmakedefine01 ENABLE_DATALIST_ELEMENT
 #cmakedefine01 ENABLE_DATA_TRANSFER_ITEMS
@@ -46,6 +47,7 @@
 #cmakedefine01 ENABLE_IFRAME_SEAMLESS
 #cmakedefine01 ENABLE_IMAGE_DECODER_DOWN_SAMPLING
 #cmakedefine01 ENABLE_INDEXED_DATABASE
+#cmakedefine01 ENABLE_INPUT_SPEECH
 #cmakedefine01 ENABLE_INPUT_TYPE_COLOR
 #cmakedefine01 ENABLE_INPUT_TYPE_DATE
 #cmakedefine01 ENABLE_INPUT_TYPE_DATETIME
@@ -57,14 +59,18 @@
 #cmakedefine01 ENABLE_JAVASCRIPT_DEBUGGER
 #cmakedefine01 ENABLE_JIT
 #cmakedefine01 ENABLE_LEGACY_NOTIFICATIONS
+#cmakedefine01 ENABLE_LEGACY_VIEWPORT_ADAPTION
+#cmakedefine01 ENABLE_LEGACY_WEBKIT_BLOB_BUILDER
 #cmakedefine01 ENABLE_LINK_PREFETCH
 #cmakedefine01 ENABLE_LINK_PRERENDER
-#cmakedefine01 ENABLE_LEGACY_WEBKIT_BLOB_BUILDER
 #cmakedefine01 ENABLE_MATHML
 #cmakedefine01 ENABLE_MEDIA_CAPTURE
+#cmakedefine01 ENABLE_MEDIA_SOURCE
+#cmakedefine01 ENABLE_MEDIA_STATISTICS
 #cmakedefine01 ENABLE_MEDIA_STREAM
 #cmakedefine01 ENABLE_MEMORY_SAMPLER
 #cmakedefine01 ENABLE_METER_ELEMENT
+#cmakedefine01 ENABLE_MHTML
 #cmakedefine01 ENABLE_MICRODATA
 #cmakedefine01 ENABLE_MUTATION_OBSERVERS
 #cmakedefine01 ENABLE_NAVIGATOR_CONTENT_UTILS
@@ -75,14 +81,19 @@
 #cmakedefine01 ENABLE_OVERFLOW_SCROLLING
 #cmakedefine01 ENABLE_PAGE_POPUP
 #cmakedefine01 ENABLE_PAGE_VISIBILITY_API
+#cmakedefine01 ENABLE_PLUGIN_PROXY_FOR_VIDEO
 #cmakedefine01 ENABLE_PROGRESS_ELEMENT
+#cmakedefine01 ENABLE_QUOTA
+#cmakedefine01 ENABLE_REPAINT_THROTTLING
 #cmakedefine01 ENABLE_REQUEST_ANIMATION_FRAME
+#cmakedefine01 ENABLE_SCRIPTED_SPEECH
 #cmakedefine01 ENABLE_SHADOW_DOM
 #cmakedefine01 ENABLE_SHARED_WORKERS
 #cmakedefine01 ENABLE_SMOOTH_SCROLLING
 #cmakedefine01 ENABLE_SQL_DATABASE
 #cmakedefine01 ENABLE_STYLE_SCOPED
 #cmakedefine01 ENABLE_SVG
+#cmakedefine01 ENABLE_SVG_DOM_OBJC_BINDINGS
 #cmakedefine01 ENABLE_SVG_FONTS
 #cmakedefine01 ENABLE_TEXT_AUTOSIZING
 #cmakedefine01 ENABLE_TOUCH_EVENTS
