@@ -1,3 +1,14 @@
+2012-09-04  Jinwoo Song  <jinwoo7.song@samsung.com>
+
+        [CMAKE] Update cmakeconfig.h.cmake 
+        https://bugs.webkit.org/show_bug.cgi?id=95712
+       
+        Reviewed by Gyuyoung Kim.
+
+        Update feature definitions which are missing compared to WebKitFeatures.cmake
+
+        * Source/cmakeconfig.h.cmake:
+
 2012-09-03  Jinwoo Song  <jinwoo7.song@samsung.com>
 
         [EFL] Use WebKitVersion.h to get version information
